Fixed spacing for XXL

--- a/PokerCardsShared/wwwroot/css/site.css
+++ b/PokerCardsShared/wwwroot/css/site.css
@@ -170,7 +170,7 @@ app {
 .progress-label {
     line-height: 30px;
     float: left;
-    width: 30px;
+    width: 35px;
 }
 
 .progress-note {
